# experiment-flask

./: .gitignore  .gitlab-ci.yml  Jenkinsfile  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci-cd.yml
app/: __init__.py
app/models/: student.py
app/repository/: student_repository.py
app/routes/: student_routes.py
app/services/: student_service.py
experiment_results/: results.csv
experiment_results/E8/github/run_1/: flaky_failure_log.txt  grade_management-1.0.0-py3-none-any.whl  junit.xml
experiment_results/E8/github/run_2/: flaky_failure_log.txt  grade_management-1.0.0-py3-none-any.whl  junit.xml
experiment_results/E8/github/run_3/: flaky_failure_log.txt  grade_management-1.0.0-py3-none-any.whl  junit.xml
experiment_results/E8b/github/run_1/: grade_management-1.0.0-py3-none-any.whl  junit.xml
experiment_results/E8b/github/run_2/: grade_management-1.0.0-py3-none-any.whl  junit.xml
experiment_results/E8b/github/run_3/: grade_management-1.0.0-py3-none-any.whl  junit.xml
scripts/: collect_results.py  inject_failure.py  m13_predict.py  run_experiment.ps1
tests/: conftest.py  test_student_controller.py  test_student_service.py
